--- a/AplicacionFallabela/Front/Views/Compania/Edit.cshtml
+++ b/AplicacionFallabela/Front/Views/Compania/Edit.cshtml
@@ -1,30 +1,30 @@
 ﻿@model Infraestructura.InfraestructuraCompania
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Crear Compañia</h2>
+<h2>Edit</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Compañia</h4>
+        <h4>InfraestructuraCompania</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group" hidden>
             @Html.LabelFor(model => model.COM_CONT, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.COM_CONT, new { htmlAttributes = new { visible="false"} })
+                @Html.EditorFor(model => model.COM_CONT, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.COM_CONT, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.COM_NOMBRE,"NOMBRE", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.COM_NOMBRE, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.COM_NOMBRE, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.COM_NOMBRE, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.COM_NIT,"NIT", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.COM_NIT, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.COM_NIT, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.COM_NIT, "", new { @class = "text-danger" })
@@ -41,7 +41,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
