--- a/AplicacionFallabela/Front/Views/Compania/Delete.cshtml
+++ b/AplicacionFallabela/Front/Views/Compania/Delete.cshtml
@@ -6,13 +6,13 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Esta seguro de eliminar esta compañia?</h3>
 <div>
-    <h4>InfraestructuraCompania</h4>
+    <h4>Compania</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.COM_CONT)
+            <label>ID</label>
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.COM_NOMBRE)
+            <label>NOMBRE</label>
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.COM_NIT)
+            <label>NIT</label>
         </dt>
 
         <dd>
