--- a/AplicacionFallabela/Front/Views/Compania/Details.cshtml
+++ b/AplicacionFallabela/Front/Views/Compania/Details.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles</h2>
 
 <div>
-    <h4>InfraestructuraCompania</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.COM_CONT)
+            <label id="ID" type="text" />
         </dt>
 
         <dd>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.COM_NOMBRE)
+            <label id="NOMBRE" type="text" />
         </dt>
 
         <dd>
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.COM_NIT)
+            <label id="NIT" type="text" />
         </dt>
 
         <dd>
@@ -37,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.COM_CONT }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
