--- a/AplicacionFallabela/Front/Views/Shared/_Layout.cshtml
+++ b/AplicacionFallabela/Front/Views/Shared/_Layout.cshtml
@@ -17,10 +17,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Compañias", "Index", "Compania", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>
+                        @Html.ActionLink("Productos", "Index", "Productos", new { area = "" }, new { @class = "navbar-brand" })
+                    </li> 
                 </ul>
             </div>
         </div>
